Implement official MCP (Model Context Protocol) specification - Replace custom MCP with official SDK - Add mcp-server.py following MCP spec - Add mcp-client.js for browser - Update all HTML files - Add documentation and migration guide

--- a/product-detail.html
+++ b/product-detail.html
@@ -135,7 +135,7 @@
 
     <div id="toast" class="toast"></div>
 
-    <script src="js/mcp-image-tool.js"></script>
+    <script src="js/mcp-client.js"></script>
     <script src="js/app.js"></script>
     <script src="js/product-detail.js"></script>
     <script src="js/auth.js"></script>
