--- a/checkout.html
+++ b/checkout.html
@@ -116,7 +116,7 @@
 
     <div id="toast" class="toast"></div>
 
-    <script src="js/mcp-image-tool.js"></script>
+    <script src="js/mcp-client.js"></script>
     <script src="js/app.js"></script>
     <script src="js/checkout.js"></script>
     <script src="js/cart.js"></script>
