--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <!-- Toast Notifications -->
     <div id="toast" class="toast"></div>
 
-    <script src="js/mcp-image-tool.js"></script>
+    <script src="js/mcp-client.js"></script>
     <script src="js/app.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/cart.js"></script>
