--- a/products.html
+++ b/products.html
@@ -128,7 +128,7 @@
 
     <div id="toast" class="toast"></div>
 
-    <script src="js/mcp-image-tool.js"></script>
+    <script src="js/mcp-client.js"></script>
     <script src="js/app.js"></script>
     <script src="js/products.js"></script>
     <script src="js/auth.js"></script>
